--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     <script type="text/javascript" src="js/googleMapsResponse_python.js"></script>
     <script type="text/javascript" src="jslib/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="jslib/knockout-3.4.2.min.js"></script>
+    <script type="text/javascript" src="jslib/masonry.pkgd.min.js"></script>
     <script type="text/javascript" src="jslib/mediaelement/mediaelement-and-player.min.js"></script>
     <script type="text/javascript" src="js/gmapsControl.js"></script>
     <script type="text/javascript" src="js/dayData.js"></script>
