adding title for day

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </div>
             <div class="content">
                 <div class="sidebar">
+                    <h1 data-bind="text: descriptionTitle"></h1>
                     <div class="description" data-bind="html: dayDatum().description"></div>
                 </div>
                 <div class="media-wrapper">
